remove z-index to ensure that border and hover are visible

--- a/packages/components-react/src/form-field-checkbox/FormFieldCheckbox.scss
+++ b/packages/components-react/src/form-field-checkbox/FormFieldCheckbox.scss
@@ -41,12 +41,10 @@
   gap: 0 var(--_lux-column-gap);
 
   &::before {
-    position: relative;
     grid-row-start: label;
     grid-row-end: description;
     grid-column-start: input;
     grid-column-end: description;
-    z-index: -1;
     border: var(--lux-form-field-checkbox-inner-border-width) var(--lux-form-field-checkbox-inner-border-style)
       var(--lux-form-field-checkbox-inner-border-color);
     border-radius: var(--lux-form-field-checkbox-inner-border-radius);
@@ -72,7 +70,7 @@
 
     @include focus-ring.utrecht-focus-ring;
 
-    z-index: -1;
+    z-index: auto;
     border-color: var(--lux-form-field-checkbox-focus-visible-inner-border-color);
     background-color: var(--lux-form-field-checkbox-focus-visible-inner-background-color);
     color: var(--lux-form-field-checkbox-focus-visible-inner-color);
